bug squashing (#88)
* style modules

* fix vue module namespacing

* compile for production

* fix column widths

* fix z-index on modal

* fix error on status submitted

--- a/resources/assets/css/main.css
+++ b/resources/assets/css/main.css
@@ -99,6 +99,14 @@
     @apply .rounded
 }
 
+.max-w-icon {
+    max-width: 8rem;
+}
+
+.min-w-mobile {
+    min-width: 300px;
+}
+
 .grey-gradient {
     /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#2e92b1+0,37cbf0+100 */
     background: rgb(46,146,177); /* Old browsers */
